Fix menu align in chrome

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -58,6 +58,7 @@
     display: flex;
     flex-flow: column wrap;
     align-content: center;
+    align-items: center;
     justify-content: center;
     float: left;
     width: 50%;
@@ -92,6 +93,7 @@
     }
 
     .logo {
+      margin-left: 20px;
       margin-top: 6vh;
       justify-content: center;
       width: 300px;
